--- a/PageObjectFactories/test-output/index.html
+++ b/PageObjectFactories/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" class="navigator-link" panel-name="suite-Page_Object_Model_With_Page_Factories">
-              <span class="suite-name border-failed">Page Object Model With Page Factories</span>
+            <a href="#" class="navigator-link" panel-name="suite-Default_suite">
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="test-xml-Page_Object_Model_With_Page_Factories">
-                    <span>D:\Projects\Frameworks-Architect\PageObjectFactories\src\test\resources\com\pol\runner\testng.xml</span>
+                  <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
+                    <span>C:\Users\selenium\AppData\Local\Temp\testng-eclipse--1630165954\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testlist-Page_Object_Model_With_Page_Factories">
-                    <span class="test-stats">2 tests</span>
+                  <a href="#" class="navigator-link " panel-name="testlist-Default_suite">
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="group-Page_Object_Model_With_Page_Factories">
+                  <a href="#" class="navigator-link " panel-name="group-Default_suite">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="times-Page_Object_Model_With_Page_Factories">
+                  <a href="#" class="navigator-link " panel-name="times-Default_suite">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="reporter-Page_Object_Model_With_Page_Factories">
+                  <a href="#" class="navigator-link " panel-name="reporter-Default_suite">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="ignored-methods-Page_Object_Model_With_Page_Factories">
+                  <a href="#" class="navigator-link " panel-name="ignored-methods-Default_suite">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="chronological-Page_Object_Model_With_Page_Factories">
+                  <a href="#" class="navigator-link " panel-name="chronological-Default_suite">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -91,35 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Page_Object_Model_With_Page_Factories" class="hide-methods failed suite-Page_Object_Model_With_Page_Factories"> (hide)</a> <!-- hide-methods failed suite-Page_Object_Model_With_Page_Factories -->
-                      <a href="#" panel-name="suite-Page_Object_Model_With_Page_Factories" class="show-methods failed suite-Page_Object_Model_With_Page_Factories"> (show)</a> <!-- show-methods failed suite-Page_Object_Model_With_Page_Factories -->
-                    </span>
-                    <div class="method-list-content failed suite-Page_Object_Model_With_Page_Factories">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_Model_With_Page_Factories" title="com.pol.testcases.FlightSearchTest" hash-for-method="flightSearchTest">flightSearchTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Page_Object_Model_With_Page_Factories -->
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Page_Object_Model_With_Page_Factories" class="hide-methods passed suite-Page_Object_Model_With_Page_Factories"> (hide)</a> <!-- hide-methods passed suite-Page_Object_Model_With_Page_Factories -->
-                      <a href="#" panel-name="suite-Page_Object_Model_With_Page_Factories" class="show-methods passed suite-Page_Object_Model_With_Page_Factories"> (show)</a> <!-- show-methods passed suite-Page_Object_Model_With_Page_Factories -->
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Page_Object_Model_With_Page_Factories">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_Model_With_Page_Factories" title="com.pol.testcases.LoginTest" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.pol.testcases.FlightSearchTest" hash-for-method="flightSearchTest">flightSearchTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Page_Object_Model_With_Page_Factories -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -130,10 +116,10 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Page_Object_Model_With_Page_Factories" class="panel Page_Object_Model_With_Page_Factories">
-          <div class="suite-Page_Object_Model_With_Page_Factories-class-failed">
+        <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.pol.testcases.FlightSearchTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -142,140 +128,92 @@
                   <a name="flightSearchTest">
                   </a> <!-- flightSearchTest -->
                   <span class="method-name">flightSearchTest</span>
-                  <div class="stack-trace">java.lang.Throwable: Multiple failures (2):
-
-Failure 1 of 2:
-java.lang.AssertionError: expected [7] but found [5]
-	at com.pol.errorcollectors.ErrorCollector.assertEquals(ErrorCollector.java:38)
-	at com.pol.errorcollectors.ErrorCollector.verifyEquals(ErrorCollector.java:102)
-	at com.pol.testcases.FlightSearchTest.flightSearchTest(FlightSearchTest.java:20)
-
-
-Failure 2 of 2:
-java.lang.AssertionError: expected [8] but found [5]
-	at com.pol.errorcollectors.ErrorCollector.assertEquals(ErrorCollector.java:38)
-	at com.pol.errorcollectors.ErrorCollector.verifyEquals(ErrorCollector.java:102)
-	at com.pol.testcases.FlightSearchTest.flightSearchTest(FlightSearchTest.java:21)
-... Removed 60 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Page_Object_Model_With_Page_Factories-class-failed -->
-          <div class="suite-Page_Object_Model_With_Page_Factories-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.pol.testcases.LoginTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginTest">
-                  </a> <!-- loginTest -->
-                  <span class="method-name">loginTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Page_Object_Model_With_Page_Factories-class-passed -->
-        </div> <!-- panel Page_Object_Model_With_Page_Factories -->
-        <div panel-name="test-xml-Page_Object_Model_With_Page_Factories" class="panel">
+          </div> <!-- suite-Default_suite-class-passed -->
+        </div> <!-- panel Default_suite -->
+        <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Projects\Frameworks-Architect\PageObjectFactories\src\test\resources\com\pol\runner\testng.xml</span>
+            <span class="header-content">C:\Users\selenium\AppData\Local\Temp\testng-eclipse--1630165954\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Page Object Model With Page Factories&quot;&gt;
-  &lt;listeners&gt;
-    &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
-    &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
-    &lt;listener class-name=&quot;com.pol.errorcollectors.TestListenerAdapter&quot;/&gt;
-  &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Login Test&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.pol.testcases.FlightSearchTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Login Test --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;CreateAccount Test&quot;&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.pol.testcases.LoginTest&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- CreateAccount Test --&gt;
-&lt;/suite&gt; &lt;!-- Page Object Model With Page Factories --&gt;
+  &lt;/test&gt; &lt;!-- Default test --&gt;
+&lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Page_Object_Model_With_Page_Factories" class="panel">
+        <div panel-name="testlist-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Page Object Model With Page Factories</span>
+            <span class="header-content">Tests for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Login Test (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">CreateAccount Test (1 class)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Page_Object_Model_With_Page_Factories" class="panel">
+        <div panel-name="group-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Page Object Model With Page Factories</span>
+            <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Page_Object_Model_With_Page_Factories" class="panel">
+        <div panel-name="times-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Page Object Model With Page Factories</span>
+            <span class="header-content">Times for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Page_Object_Model_With_Page_Factories');
-function tableData_Page_Object_Model_With_Page_Factories() {
+suiteTableInitFunctions.push('tableData_Default_suite');
+function tableData_Default_suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'flightSearchTest')
 data.setCell(0, 2, 'com.pol.testcases.FlightSearchTest')
-data.setCell(0, 3, 40269);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginTest')
-data.setCell(1, 2, 'com.pol.testcases.LoginTest')
-data.setCell(1, 3, 26726);
-window.suiteTableData['Page_Object_Model_With_Page_Factories']= { tableData: data, tableDiv: 'times-div-Page_Object_Model_With_Page_Factories'}
+data.setCell(0, 3, 71852);
+window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
               <span class="suite-total-time">Total running time: 1 minutes</span>
-              <div id="times-div-Page_Object_Model_With_Page_Factories">
-              </div> <!-- times-div-Page_Object_Model_With_Page_Factories -->
+              <div id="times-div-Default_suite">
+              </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Page_Object_Model_With_Page_Factories" class="panel">
+        <div panel-name="reporter-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Page Object Model With Page Factories</span>
+            <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Page_Object_Model_With_Page_Factories" class="panel">
+        <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Page_Object_Model_With_Page_Factories" class="panel">
+        <div panel-name="chronological-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -283,17 +221,8 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.pol.testcases.FlightSearchTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">flightSearchTest</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.pol.testcases.LoginTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">loginTest</span>
-                <span class="method-start">40315 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
